[gd_scene load_steps=6 format=1]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/bg.png" type="Texture" id=2]
[ext_resource path="res://ui/icons/join_war.png" type="Texture" id=3]
[ext_resource path="res://fonts/ui_font_32.fnt" type="BitmapFont" id=4]
[ext_resource path="res://ui/title_label.png" type="Texture" id=5]

[node name="root" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="bg" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="join_fight_button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 903.0
margin/top = 647.0
margin/right = 1031.0
margin/bottom = 775.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )

[node name="Label2" type="Label" parent="join_fight_button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -35.0
margin/top = 139.0
margin/right = 160.0
margin/bottom = 172.0
custom_fonts/font = ExtResource( 4 )
text = "Join The War"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="main_label" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 414.0
margin/top = 312.0
margin/right = 1554.0
margin/bottom = 559.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="log_in_pop_up" type="Popup" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 762.0
margin/top = 421.0
margin/right = 1170.0
margin/bottom = 645.0
popup/exclusive = true
__meta__ = { "_edit_group_":true }

[node name="Panel" type="Panel" parent="log_in_pop_up"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 404.0
margin/bottom = 218.0

[node name="VBoxContainer" type="VBoxContainer" parent="log_in_pop_up"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 11.0
margin/top = 12.0
margin/right = 394.0
margin/bottom = 206.0
alignment = 0
__meta__ = { "_edit_group_":true }

[node name="Label" type="Label" parent="log_in_pop_up/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 383.0
margin/bottom = 114.0
text = "Currently, we only support GameJolt accounts.\n\nPlease Enter your username and Gamejolt Token if you wish to log in, or proceed as a guest with boring username.\n\nThe choice is yours."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="username" type="HBoxContainer" parent="log_in_pop_up/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 118.0
margin/right = 383.0
margin/bottom = 142.0
alignment = 0

[node name="Label" type="Label" parent="log_in_pop_up/VBoxContainer/username"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 189.0
margin/bottom = 19.0
text = "Username"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit" type="LineEdit" parent="log_in_pop_up/VBoxContainer/username"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 193.0
margin/top = 0.0
margin/right = 383.0
margin/bottom = 24.0
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="token" type="HBoxContainer" parent="log_in_pop_up/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 146.0
margin/right = 383.0
margin/bottom = 170.0
alignment = 0

[node name="Label" type="Label" parent="log_in_pop_up/VBoxContainer/token"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 189.0
margin/bottom = 19.0
text = "Token"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit" type="LineEdit" parent="log_in_pop_up/VBoxContainer/token"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 193.0
margin/top = 0.0
margin/right = 383.0
margin/bottom = 24.0
placeholder/alpha = 0.6
secret = true
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="buttons" type="HBoxContainer" parent="log_in_pop_up/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 174.0
margin/right = 383.0
margin/bottom = 194.0
alignment = 0

[node name="log_in" type="Button" parent="log_in_pop_up/VBoxContainer/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 189.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Log In With GameJolt"
flat = false

[node name="guest" type="Button" parent="log_in_pop_up/VBoxContainer/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 193.0
margin/top = 0.0
margin/right = 383.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Proceeed As Guest"
flat = false

[connection signal="pressed" from="join_fight_button" to="." method="_on_join_fight_button_pressed"]

[connection signal="pressed" from="log_in_pop_up/VBoxContainer/buttons/log_in" to="." method="_on_log_in_pressed"]

[connection signal="pressed" from="log_in_pop_up/VBoxContainer/buttons/guest" to="." method="_on_guest_pressed"]


